Atualizando textos inicias da opção 1 e 2!

--- a/templates/index.html
+++ b/templates/index.html
@@ -193,12 +193,12 @@
                 Selecione uma opção para gerar os ícones:
             </p>
 
-            <label for="numberID">Opção A: Número ID da API:</label>
+            <label for="numberID">Número ID:</label>
             <input type="text" id="numberID" name="numberID" placeholder="Ex: 12345 (Ou use a opção B)" >
             
-            <p class="separator">OU</p>
+            <p class="separator">Max 3.0 by>Richard o REI</p>
 
-            <label for="image_file">Opção B: Fazer Upload de Imagem (PNG/JPG):</label>
+            <label for="image_file">Fazer Upload de Imagem:</label>
             <input type="file" id="image_file" name="image_file" accept="image/png, image/jpeg">
 
             <input type="submit" value="Gerar Ícones">
